--- a/src/main/java/org/sa/concepts/topics/concepts.properties
+++ b/src/main/java/org/sa/concepts/topics/concepts.properties
@@ -1,5 +1,3 @@
-#Generated
-#Thu May 01 01:25:42 EEST 2025
 UI\ dialog=secondary window used to display information or prompt user action.
 abstract\ class=both shows what methods the extending classes has to implement and can implement some shared code.
 abstraction\ (1)=process of hiding complex implementation details and showing only the necessary features.
@@ -13,7 +11,7 @@ coupling=degree of interdependence between software modules.
 directed\ graph=nodes connected one-directionally.
 domain=The broader problem space or business area that includes various contexts or subdomains, each with its own specific model and logic.
 domain\ model=software implementation of a business area.
-edge=connection of two nodes.
+edge\ (graphs)=connection of two nodes.
 example\ of\ a\ semantic\ registration\ message\ (JSON)=Raw Data\: Includes fields such as userId, username, email, registrationDate, and status; Metadata\: Includes contextual information like registrationSource, referralCode, and ipAddress, as well as the verification status.
 example\ of\ bounded\ contexts=an e-commerce system with User Management (user registration, authentication, profile management), Order Processing (orders, payments, order statuses), and Inventory Management (stock levels, suppliers, product information).
 example\ of\ good\ cohesion\ but\ poor\ separation\ of\ concerns=A DocumentManager class with methods for createDocument, formatDocument, and saveDocument demonstrates good cohesion (all methods are related to document management) but poor separation of concerns (handles multiple unrelated aspects of document handling).
