master: managed concepts

--- a/src/main/java/org/sa/concepts/topics/containerisation.properties
+++ b/src/main/java/org/sa/concepts/topics/containerisation.properties
@@ -37,3 +37,5 @@ Throttling=intentional limitation or control of certain resources, actions, or p
 Worker\ node=computing node dedicated to running the containerized applications, has its own CPU, memory, and other resources.
 YAML=(YAML Ain't Markup Language) - is a human-readable data serialization format. Like XML or JSON.
 secret=kubernetes resource to store sensitive data as a key value pair in etcd. secrets can be read by cluster admins, namespace admins, users with RBAC permissions
+F5=advanced load balancer and application traffic controller.
+F5\ rules=logic to control service traffic (access, balance and security)
