--- a/src/main/java/org/sa/concepts/topics/databases.properties
+++ b/src/main/java/org/sa/concepts/topics/databases.properties
@@ -4,3 +4,6 @@ Core=marks that database is main. But in our case there are only core databases 
 DBA=database administrators.
 NOT\ IN\ (sql)=operator, \!\=
 Partition\ and\ sample=part of database table.
+RDBMS=relational database management system.
+JPQL=Java Persistence Query Language - interacts with databases in a platform-independent way. Automatic translation to actual SQL query depending on platform. Used with JPA.
+
