--- a/src/main/java/org/sa/concepts/topics/regulations.properties
+++ b/src/main/java/org/sa/concepts/topics/regulations.properties
@@ -8,3 +8,5 @@ Java\ EE=Java Enterprise Edition - platform, which provides a set of specificati
 PCI\ DSS=Payment Card Industry Data Security Standard - ensures the secure handling of credit card information during payment transactions.
 Personal\ data\ retention=storing and maintaining individuals' personal information for a specific period.
 Tampering=making illegal or/and damaging alterations.
+CDD=Customer Due Dilligence - performing customer checks.
+DPIA=Data Protection Impact Assessment - process identifying and minimising risks of the processing of personal data.
