master: managed concepts

--- a/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
+++ b/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
@@ -11,3 +11,4 @@ hash=unique representation of the input data. Used for encryption, integrity ver
 DRY=Don't Repeat Yourself - programming principle.
 Encapsulation=Hiding internal elements of object or service. Provides clear separation. Improves maintainability.
 Boilerplate=sections of code that have to be included in many places with little or no alteration.
+state=current values of fields of an object.
