--- a/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
+++ b/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
@@ -1,3 +1,7 @@
 DevOps=practices, principles, and cultural philosophies. The primary goal is to automate the process of software delivery and infrastructure changes.
 DevSecOps=practice of integrating security seamlessly into every phase of the software development and delivery pipeline.
 Jenkins=automating tasks like code integration, testing, and deployment.
+pipeline=process of building, testing and deploying. Often associated with automatisation.
+build=entire process for execution - compiling source files, linking libraries, and packaging resources into a distributable format
+deploying=making app available on a target environment. For example production environment.
+CICD=C - continuous (automatic), I - integration (building and testing), D - delivery (deploying).
