--- a/src/main/java/org/sa/concepts/topics/databases.properties
+++ b/src/main/java/org/sa/concepts/topics/databases.properties
@@ -6,4 +6,4 @@ NOT\ IN\ (sql)=operator, \!\=
 Partition\ and\ sample=part of database table.
 RDBMS=relational database management system.
 JPQL=Java Persistence Query Language - interacts with databases in a platform-independent way. Automatic translation to actual SQL query depending on platform. Used with JPA.
-
+Hibernate=ORM framework for the Java - forerunner of JPA.
