--- a/src/main/java/org/sa/concepts/topics/frontend.properties
+++ b/src/main/java/org/sa/concepts/topics/frontend.properties
@@ -7,3 +7,5 @@ JSX=JavaScript as XML - is an HTML-like syntax used in React to create UI elemen
 JWT=JSON Web Token - compact, URL-safe token format used to securely encode, verify, and transmit information between parties, commonly for authentication and authorization purposes.
 URL\ safe\ format=avoids special characters, making data suitable for transmission in URLs.
 token=secure, encoded string used to represent authentication, authorization, or session information digitally.
+overlay=(web) - graphical element that is superimposed on top of another elements, typically to display additional content or provide a focused interaction area.
+asynchronous=each next task starts without previous one ending. Task become concurrent.
