--- a/src/main/java/org/sa/concepts/topics/hardware.properties
+++ b/src/main/java/org/sa/concepts/topics/hardware.properties
@@ -1,2 +1,3 @@
 YubiKey=A flash drive for security purposes on a Mac.
 NFC=Near Field Communication - wireless communication technology that allows data exchange between devices over a very short distance, typically a few centimeters.
+operations\ specialist=takes care of IT infrastructure\: severs, networks, hardware. Deploys and configures software apps
