--- a/src/main/java/org/sa/concepts/topics/javaAndSpring.properties
+++ b/src/main/java/org/sa/concepts/topics/javaAndSpring.properties
@@ -1,6 +1,6 @@
-POJO=Plain Old Java Object - Java class that does not extend or implement any specialized classes or interfaces from frameworks or libraries.
-present()=method in fluentlenium that checkts if the element is there in the DOM.
-abstract\ class=both shows what methods the extending classes has to implement and can implement some shared code.
+present()=method in fluentlenium that checkPOJO=Plaiif the element is there in the DOM.
+abstractn Old Java Object - Java class that does not extend or implement any specialized classes or interfaces from frameworks or libraries.
+ts \ class=both shows what methods the extending classes has to implement and can implement some shared code.
 interface\ in\ java=only shows what methods the implementing classes has to implement.
 diamond\ operator\ \(Java\)=copies the variable type from the left side to avoid repeating it; marked by <>.
 Java\ beans=simple objects with only getters and setters for the attributes.
@@ -9,3 +9,7 @@ Spring\ boot=part of Spring (Java framework) specific for creating web app back 
 Bean\ factory/\ Application\ context=dependency injection container in Spring.
 what\ is\ stereotype\ in\ Spring=role of class, marked by annotation. E.g.\: @Controller @Service
 context\ (Bounded\ Context)=A defined boundary within the domain that isolates a particular model and ensures consistent terminology and rules within that specific area.
+JDBC=Java Database Connectivity - Java-based API that provides a standard interface for connecting to relational databases and executing SQL queries.
+JPA=Java Persistence API - Java specification for managing relational data in Java applications. It provides a standard way to map Java objects to database tables and vice versa.
+JSP=Java Server Pages - allows Java code directly within HTML pages. Provides tags for iteration, conditionals, and formatting.
+IoC=Inversion of Control - design principle - object creation and lifecycle is inverted or delegated to a container or framework, as opposed to being handled by the objects themselves.
