--- a/src/main/java/org/sa/concepts/topics/regulations.properties
+++ b/src/main/java/org/sa/concepts/topics/regulations.properties
@@ -10,3 +10,4 @@ Personal\ data\ retention=storing and maintaining individuals' personal informat
 Tampering=making illegal or/and damaging alterations.
 CDD=Customer Due Dilligence - performing customer checks.
 DPIA=Data Protection Impact Assessment - process identifying and minimising risks of the processing of personal data.
+TDC=test data compliance - test data meets standards and regulations.
