master: concepts managed

--- a/src/main/java/org/sa/concepts/topics/apis.properties
+++ b/src/main/java/org/sa/concepts/topics/apis.properties
@@ -5,3 +5,5 @@ RESTful=1. explicitness(statelessness) 2.client server 3.standard HTTP methods (
 Swagger=framework that simplifies the process of designing, documenting, and testing RESTful web APIs.
 URL=Uniform Resource Locators.
 Using\ APIs=exchanging data and functionality using predefined rules.
+nonSemanticMessage=raw payload only, no extra structure or meaning (e.g., plain text, CSV row, raw byte stream)
+semanticMessage=raw data plus metadata or structure that explains the meaning (e.g., JSON with field names)
