master: semantic message

--- a/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
+++ b/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
@@ -5,3 +5,4 @@ pipeline=process of building, testing and deploying. Often associated with autom
 build=entire process for execution - compiling source files, linking libraries, and packaging resources into a distributable format
 deploying=making app available on a target environment. For example production environment.
 CICD=C - continuous (automatic), I - integration (building and testing), D - delivery (deploying).
+Assemble=specific phase within the build process - collecting and combining individual components into larger units.
