master: managing concepts

--- a/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
+++ b/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
@@ -12,3 +12,12 @@ DRY=Don't Repeat Yourself - programming principle.
 Encapsulation=Hiding internal elements of object or service. Provides clear separation. Improves maintainability.
 Boilerplate=sections of code that have to be included in many places with little or no alteration.
 state=current values of fields of an object.
+abstraction\ (1)=process of hiding complex implementation details and showing only the necessary features.
+abstraction\ (2)=helps to manage complexity by hiding implementation details and exposing only essential features.
+abstraction\ (3)=examples\: Interfaces, Abstract Classes, Modules and Packages, APIs (Application Programming Interfaces), Design Patterns (e.g., Facade Pattern, Decorator Pattern), Layered Architecture, Frameworks and Libraries, Database ORM (Object-Relational Mapping), Microservices, Virtual Machines and Containers.
+cohesion=degree to which elements of a module or class are related and work together to achieve a single purpose.
+cohesion\ example=A UserManager class with methods createUser, deleteUser, and updateUser has high cohesion, focusing solely on user management.
+coupling=degree of interdependence between software modules.
+factory\ design\ pattern=provides an interface for creating instances of a class, allowing subclasses to alter the type of objects that will be created.
+
+
