--- a/src/main/java/org/sa/concepts/topics/containerisation.properties
+++ b/src/main/java/org/sa/concepts/topics/containerisation.properties
@@ -39,3 +39,6 @@ YAML=(YAML Ain't Markup Language) - is a human-readable data serialization forma
 secret=kubernetes resource to store sensitive data as a key value pair in etcd. secrets can be read by cluster admins, namespace admins, users with RBAC permissions
 F5=advanced load balancer and application traffic controller.
 F5\ rules=logic to control service traffic (access, balance and security)
+Etcd=configuration data shared among nodes in a distributed system.
+Etcd\ etymology="et cetera" + "distributed" - comes from the /etc directory in Linux for configuration.
+VIP\ (OpenShift)=Virtual IP - routes traffic to services or pods within a cluster, often for load balancing.
