--- a/src/main/java/org/sa/concepts/topics/frontend.properties
+++ b/src/main/java/org/sa/concepts/topics/frontend.properties
@@ -9,3 +9,7 @@ URL\ safe\ format=avoids special characters, making data suitable for transmissi
 token=secure, encoded string used to represent authentication, authorization, or session information digitally.
 overlay=(web) - graphical element that is superimposed on top of another elements, typically to display additional content or provide a focused interaction area.
 asynchronous=each next task starts without previous one ending. Task become concurrent.
+SwiftUI=user interface framework developed by Apple for building apps across iOS, macOS, watchOS, and tvOS.
+landing\ page=entry point for a particular section of a website. Prompts a specific action from visitors, such as making a purchase, signing up for a newsletter, downloading a resource, or filling out a form.
+CHROMIUM=base upon which many modern web browsers are built.
+
