--- a/src/main/java/org/sa/concepts/topics/javaAndSpring.properties
+++ b/src/main/java/org/sa/concepts/topics/javaAndSpring.properties
@@ -13,3 +13,8 @@ JDBC=Java Database Connectivity - Java-based API that provides a standard interf
 JPA=Java Persistence API - Java specification for managing relational data in Java applications. It provides a standard way to map Java objects to database tables and vice versa.
 JSP=Java Server Pages - allows Java code directly within HTML pages. Provides tags for iteration, conditionals, and formatting.
 IoC=Inversion of Control - design principle - object creation and lifecycle is inverted or delegated to a container or framework, as opposed to being handled by the objects themselves.
+.war\ file=Web Application Archive - packaging format used for distributing and deploying web applications in the Java ecosystem. Similar to .jar file.
+jar\ hell=challenges arising from conflicts or compatibility issues between different versions of Java Archive (JAR) files, often encountered in projects with multiple dependencies.
+servlet\ container=handles multithreading and lifecycle of servlets. Examples\: Jetty, Apache Tomcat.
+servlet/controller/MVC=Model View Controller - handles user input, process it, and update the model or view.
+component\ scanning=method of configuration\: annotations added to classes, attributes, and methods. Helps defining bean.
