--- a/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
+++ b/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
@@ -4,5 +4,8 @@ Jenkins=automating tasks like code integration, testing, and deployment.
 pipeline=process of building, testing and deploying. Often associated with automatisation.
 build=entire process for execution - compiling source files, linking libraries, and packaging resources into a distributable format
 deploying=making app available on a target environment. For example production environment.
-CICD=C - continuous (automatic), I - integration (building and testing), D - delivery (deploying).
+CICD=C - continuous (automatic), I - integration (merging code and testing it), D - delivery (deploying).
+code\ integration=combining code changes from multiple contributors into a shared repository.
 Assemble=specific phase within the build process - collecting and combining individual components into larger units.
+key\ Components\ of\ Continuous\ Integration=VCS (e.g. Git), automated builds for compiling and error checking, automated tests, continuous feedback for immediate issue resolution, and a build server (e.g., Jenkins) to monitor VCS and trigger builds/tests.
+Ingress\ Controller=Kubernetes component that manages external access to services.
