master: managed concepts and topics

--- a/src/main/java/org/sa/concepts/topics/networking.properties
+++ b/src/main/java/org/sa/concepts/topics/networking.properties
@@ -1,5 +1,8 @@
 firewall\ opening=configuration change to allow specific traffic through the firewall, enabling communication over a given port or IP range.
 firewall=network security system that monitors and controls incoming and outgoing network traffic based on predetermined rules.
-
-
+DNS=Domain Name System - maps user - friendly domain names to numeric IP addresses.
+VPN=Virtual Private Network - encrypted and tunneled connection to trusted remote server, where your identity is hidden, but all the data in the internet accessed.
+VPN\ Whitelisting=a security measure that allows only specific IP addresses or devices to access a service through a VPN.
+Subnet=subnetwork - segment of a larger network. Subnetting improves network performance, security, and organization.
+Wireshark=app for network troubleshooting.
 
