master: managed concepts

--- a/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
+++ b/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
@@ -9,8 +9,8 @@ memoization\ technique=storing the results of expensive function calls and retur
 hashing=transforming data into a fixed-size code. Deterministic. One hash code can mean multiple original data (collision case).
 hash=unique representation of the input data. Used for encryption, integrity verification, indexing etc. Deterministic, fixed output size, irreversible, collision resistant.
 DRY=Don't Repeat Yourself - programming principle.
-Encapsulation=Hiding internal elements of object or service. Provides clear separation. Improves maintainability.
-Boilerplate=sections of code that have to be included in many places with little or no alteration.
+encapsulation=Hiding internal elements of object or service. Provides clear separation. Improves maintainability.
+boilerplate=sections of code that have to be included in many places with little or no alteration.
 state=current values of fields of an object.
 abstraction\ (1)=process of hiding complex implementation details and showing only the necessary features.
 abstraction\ (2)=helps to manage complexity by hiding implementation details and exposing only essential features.
@@ -19,5 +19,15 @@ cohesion=degree to which elements of a module or class are related and work toge
 cohesion\ example=A UserManager class with methods createUser, deleteUser, and updateUser has high cohesion, focusing solely on user management.
 coupling=degree of interdependence between software modules.
 factory\ design\ pattern=provides an interface for creating instances of a class, allowing subclasses to alter the type of objects that will be created.
+collision\ resistant=different inputs should not produce the same outcome.
+deterministic=same input will always produce the same outcome.
+defensive\ programming=ensuring that software behaves as expected even when encountering unexpected inputs or conditions. Input validation, error handling, robustness, fail-safe defaults, clear documentation.
+lazy\ initialization=object creation delayed until first use, improving performance and reducing resource consumption.
+proxy\ pattern=creating a proxy to control access to a real object, both implementing the same interface, with the proxy being used externally.
+Hungarian\ pollution=overusing type prefixes in variable names.
+technical\ debt=accumulated code imperfections.
+irreversible\ data\ transformation=not possible to obtain the original input from the outcome.
+DSL=Domain-Specific Language - syntax, designed for a specific problem domain, as opposed to being a general-purpose. Example: Thymeleaf provides DSL for HTML.
+
 
 
