--- a/src/main/java/org/sa/concepts/topics/backend.properties
+++ b/src/main/java/org/sa/concepts/topics/backend.properties
@@ -4,3 +4,6 @@ Kafka\ (3)=a platform orchestrating real-time, asynchronous communication betwee
 data\ flow=movement and transformation of data within backend systems, focusing on ingestion, processing, and distribution.
 throughput=rate at which data is processed or transmitted through a system, measured in units/events per interval.
 Microsoft\ Azure=cloud computing platform.
+real-time\ data\ flow=continuous, asynchronous transfer and processing of data as events occur
+difference\ between\ Kafka\ and\ Kubernetes\ in\ the\ sense\ that\ both\ are\ platforms\ of\ orchestration=Kafka is the data traffic controller, while Kubernetes is the container traffic controller.
+sticky\ session=ensures a user's requests are routed to the same server (no need to transfer copies of session data, Java classes don’t need serialization).
