--- a/src/main/java/org/sa/concepts/topics/businessAndWorkplace.properties
+++ b/src/main/java/org/sa/concepts/topics/businessAndWorkplace.properties
@@ -12,7 +12,9 @@ RBAC=role based access control - system of user access rights based on their rol
 Gateway\ team\ in\ an\ enterprise=ensures a secure digital environment by managing network security, access controls, and incident response protocols to safeguard data effectively.
 CI=Configuration Item - any component that needs to be managed in order to deliver an IT service.
 ubiquitous\ language=shared, common, used by both domain experts and developers to describe and discuss the domain model.
-
+PR=public release.
+postmortem=structured analysis that takes place after a failure has occurred.
+Liferay=content management system (CMS). Pre-made, highly customisable website for enterprise. Covers backend and frontend.
 
 
 
