--- a/src/main/java/org/sa/concepts/topics/networking.properties
+++ b/src/main/java/org/sa/concepts/topics/networking.properties
@@ -5,4 +5,6 @@ VPN=Virtual Private Network - encrypted and tunneled connection to trusted remot
 VPN\ Whitelisting=a security measure that allows only specific IP addresses or devices to access a service through a VPN.
 Subnet=subnetwork - segment of a larger network. Subnetting improves network performance, security, and organization.
 Wireshark=app for network troubleshooting.
+SSL\ (1)=Secure Sockets Layer - standard security protocol that encrypts the communication between a web server and a browser to protect sensitive information.
+SSL\ (2)=Secure Sockets Layer - protects communication over a network or internet. Encrypts the data between browser and website server. Successor - Transport Layer Security - TLS.
 
