--- a/src/main/java/org/sa/concepts/topics/apis.properties
+++ b/src/main/java/org/sa/concepts/topics/apis.properties
@@ -7,3 +7,4 @@ URL=Uniform Resource Locators.
 Using\ APIs=exchanging data and functionality using predefined rules.
 nonSemanticMessage=raw payload only, no extra structure or meaning (e.g., plain text, CSV row, raw byte stream)
 semanticMessage=raw data plus metadata or structure that explains the meaning (e.g., JSON with field names)
+gateway=A computer that sits between different networks or applications. The gateway converts data from one protocol format to another.
