--- a/src/main/java/org/sa/concepts/topics/frontend.properties
+++ b/src/main/java/org/sa/concepts/topics/frontend.properties
@@ -12,4 +12,6 @@ asynchronous=each next task starts without previous one ending. Task become conc
 SwiftUI=user interface framework developed by Apple for building apps across iOS, macOS, watchOS, and tvOS.
 landing\ page=entry point for a particular section of a website. Prompts a specific action from visitors, such as making a purchase, signing up for a newsletter, downloading a resource, or filling out a form.
 CHROMIUM=base upon which many modern web browsers are built.
-
+web=WWW - content over the internet. Including platform and protocols.
+web\ container=servlet container or servlet engine - component of a server that manages the execution of servlets and Java Server Pages (JSP).
+web\ portal=platform - provides access to services.
